baml_language/crates/baml_tests/snapshots/compiles/parser_statements/baml_tests__compiles__parser_statements__02_parser__if_let_edge_cases.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "if_let_shadow_then_restore"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            BINDING_PATTERN "let x"
              KW_LET "let"
              WORD "x"
          EQUALS "="
          INTEGER_LITERAL "100"
          SEMICOLON ";"
        LET_STMT
          PATTERN
            CHAIN_PATTERN
              BINDING_PATTERN "let v"
                KW_LET "let"
                WORD "v"
              COLON ":"
              UNION_PATTERN
                TYPE_PATTERN
                  TYPE_EXPR "int"
                    WORD "int"
                PIPE "|"
                TYPE_PATTERN
                  TYPE_EXPR "string"
                    WORD "string"
          EQUALS "="
          INTEGER_LITERAL "3"
          SEMICOLON ";"
        LET_STMT
          PATTERN
            BINDING_PATTERN "let inside"
              KW_LET "let"
              WORD "inside"
          EQUALS "="
          IF_LET_EXPR
            KW_IF "if"
            LET_STMT
              PATTERN
                CHAIN_PATTERN
                  BINDING_PATTERN "let x"
                    KW_LET "let"
                    WORD "x"
                  COLON ":"
                  TYPE_PATTERN
                    TYPE_EXPR "int"
                      WORD "int"
              EQUALS "="
              WORD "v"
            BLOCK_EXPR
              L_BRACE "{"
              BINARY_EXPR "x + 1"
                WORD "x"
                PLUS "+"
                INTEGER_LITERAL "1"
              R_BRACE "}"
            KW_ELSE "else"
            BLOCK_EXPR "{
    0
  }"
              L_BRACE "{"
              INTEGER_LITERAL "0"
              R_BRACE "}"
          SEMICOLON ";"
        RETURN_STMT
          KW_RETURN "return"
          BINARY_EXPR "inside + x"
            WORD "inside"
            PLUS "+"
            WORD "x"
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "if_let_else_sees_outer_not_inner"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            BINDING_PATTERN "let n"
              KW_LET "let"
              WORD "n"
          EQUALS "="
          INTEGER_LITERAL "999"
          SEMICOLON ";"
        LET_STMT
          PATTERN
            CHAIN_PATTERN
              BINDING_PATTERN "let v"
                KW_LET "let"
                WORD "v"
              COLON ":"
              UNION_PATTERN
                TYPE_PATTERN
                  TYPE_EXPR "int"
                    WORD "int"
                PIPE "|"
                TYPE_PATTERN
                  TYPE_EXPR "string"
                    WORD "string"
          EQUALS "="
          STRING_LITERAL "nope"
            QUOTE """
            WORD "nope"
            QUOTE """
          SEMICOLON ";"
        RETURN_STMT
          KW_RETURN "return"
          IF_LET_EXPR
            KW_IF "if"
            LET_STMT
              PATTERN
                CHAIN_PATTERN
                  BINDING_PATTERN "let n"
                    KW_LET "let"
                    WORD "n"
                  COLON ":"
                  TYPE_PATTERN
                    TYPE_EXPR "int"
                      WORD "int"
              EQUALS "="
              WORD "v"
            BLOCK_EXPR "{
    n
  }"
              L_BRACE "{"
              WORD "n"
              R_BRACE "}"
            KW_ELSE "else"
            BLOCK_EXPR "{
    // Here `n` is the OUTER 999, not the if-let's int binding.
    n
  }"
              L_BRACE "{"
              WORD "n"
              R_BRACE "}"
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "if_let_in_scrutinee"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "outer"
        COLON ":"
        TYPE_EXPR "int | string"
          WORD "int"
          PIPE "|"
          WORD "string"
      COMMA ","
      PARAMETER
        WORD "mid"
        COLON ":"
        TYPE_EXPR "int | string"
          WORD "int"
          PIPE "|"
          WORD "string"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            BINDING_PATTERN "let v"
              KW_LET "let"
              WORD "v"
          EQUALS "="
          IF_LET_EXPR
            KW_IF "if"
            LET_STMT
              PATTERN
                CHAIN_PATTERN
                  BINDING_PATTERN "let y"
                    KW_LET "let"
                    WORD "y"
                  COLON ":"
                  TYPE_PATTERN
                    TYPE_EXPR "int"
                      WORD "int"
              EQUALS "="
              WORD "outer"
            BLOCK_EXPR
              L_BRACE "{"
              BINARY_EXPR "y * 2"
                WORD "y"
                STAR "*"
                INTEGER_LITERAL "2"
              R_BRACE "}"
            KW_ELSE "else"
            BLOCK_EXPR
              L_BRACE "{"
              STRING_LITERAL "fallback"
                QUOTE """
                WORD "fallback"
                QUOTE """
              R_BRACE "}"
          SEMICOLON ";"
        IF_LET_EXPR
          KW_IF "if"
          LET_STMT
            PATTERN
              CHAIN_PATTERN
                BINDING_PATTERN "let x"
                  KW_LET "let"
                  WORD "x"
                COLON ":"
                TYPE_PATTERN
                  TYPE_EXPR "int"
                    WORD "int"
            EQUALS "="
            WORD "v"
          BLOCK_EXPR
            L_BRACE "{"
            RETURN_STMT
              KW_RETURN "return"
              STRING_LITERAL "got_int"
                QUOTE """
                WORD "got_int"
                QUOTE """
              SEMICOLON ";"
            R_BRACE "}"
          KW_ELSE "else"
          BLOCK_EXPR
            L_BRACE "{"
            RETURN_STMT
              KW_RETURN "return"
              STRING_LITERAL "got_other"
                QUOTE """
                WORD "got_other"
                QUOTE """
              SEMICOLON ";"
            R_BRACE "}"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "if_let_siblings_same_name"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            CHAIN_PATTERN
              BINDING_PATTERN "let a"
                KW_LET "let"
                WORD "a"
              COLON ":"
              UNION_PATTERN
                TYPE_PATTERN
                  TYPE_EXPR "int"
                    WORD "int"
                PIPE "|"
                TYPE_PATTERN
                  TYPE_EXPR "string"
                    WORD "string"
          EQUALS "="
          INTEGER_LITERAL "1"
          SEMICOLON ";"
        LET_STMT
          PATTERN
            CHAIN_PATTERN
              BINDING_PATTERN "let b"
                KW_LET "let"
                WORD "b"
              COLON ":"
              UNION_PATTERN
                TYPE_PATTERN
                  TYPE_EXPR "int"
                    WORD "int"
                PIPE "|"
                TYPE_PATTERN
                  TYPE_EXPR "string"
                    WORD "string"
          EQUALS "="
          INTEGER_LITERAL "2"
          SEMICOLON ";"
        LET_STMT
          PATTERN
            BINDING_PATTERN "let r1"
              KW_LET "let"
              WORD "r1"
          EQUALS "="
          IF_LET_EXPR
            KW_IF "if"
            LET_STMT
              PATTERN
                CHAIN_PATTERN
                  BINDING_PATTERN "let x"
                    KW_LET "let"
                    WORD "x"
                  COLON ":"
                  TYPE_PATTERN
                    TYPE_EXPR "int"
                      WORD "int"
              EQUALS "="
              WORD "a"
            BLOCK_EXPR "{ x }"
              L_BRACE "{"
              WORD "x"
              R_BRACE "}"
            KW_ELSE "else"
            BLOCK_EXPR "{ 0 }"
              L_BRACE "{"
              INTEGER_LITERAL "0"
              R_BRACE "}"
          SEMICOLON ";"
        LET_STMT
          PATTERN
            BINDING_PATTERN "let r2"
              KW_LET "let"
              WORD "r2"
          EQUALS "="
          IF_LET_EXPR
            KW_IF "if"
            LET_STMT
              PATTERN
                CHAIN_PATTERN
                  BINDING_PATTERN "let x"
                    KW_LET "let"
                    WORD "x"
                  COLON ":"
                  TYPE_PATTERN
                    TYPE_EXPR "int"
                      WORD "int"
              EQUALS "="
              WORD "b"
            BLOCK_EXPR "{ x }"
              L_BRACE "{"
              WORD "x"
              R_BRACE "}"
            KW_ELSE "else"
            BLOCK_EXPR "{ 0 }"
              L_BRACE "{"
              INTEGER_LITERAL "0"
              R_BRACE "}"
          SEMICOLON ";"
        RETURN_STMT
          KW_RETURN "return"
          BINARY_EXPR "r1 + r2"
            WORD "r1"
            PLUS "+"
            WORD "r2"
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "if_let_chained_else_if_let"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            CHAIN_PATTERN
              BINDING_PATTERN "let v"
                KW_LET "let"
                WORD "v"
              COLON ":"
              UNION_PATTERN
                TYPE_PATTERN
                  TYPE_EXPR "int"
                    WORD "int"
                PIPE "|"
                TYPE_PATTERN
                  TYPE_EXPR "string"
                    WORD "string"
                PIPE "|"
                TYPE_PATTERN
                  TYPE_EXPR "bool"
                    WORD "bool"
          EQUALS "="
          STRING_LITERAL "abc"
            QUOTE """
            WORD "abc"
            QUOTE """
          SEMICOLON ";"
        IF_LET_EXPR
          KW_IF "if"
          LET_STMT
            PATTERN
              CHAIN_PATTERN
                BINDING_PATTERN "let i"
                  KW_LET "let"
                  WORD "i"
                COLON ":"
                TYPE_PATTERN
                  TYPE_EXPR "int"
                    WORD "int"
            EQUALS "="
            WORD "v"
          BLOCK_EXPR
            L_BRACE "{"
            RETURN_STMT "return i;"
              KW_RETURN "return"
              WORD "i"
              SEMICOLON ";"
            R_BRACE "}"
          KW_ELSE "else"
          IF_LET_EXPR
            KW_IF "if"
            LET_STMT
              PATTERN
                CHAIN_PATTERN
                  BINDING_PATTERN "let s"
                    KW_LET "let"
                    WORD "s"
                  COLON ":"
                  TYPE_PATTERN
                    TYPE_EXPR "string"
                      WORD "string"
              EQUALS "="
              WORD "v"
            BLOCK_EXPR
              L_BRACE "{"
              RETURN_STMT "return 1;"
                KW_RETURN "return"
                INTEGER_LITERAL "1"
                SEMICOLON ";"
              R_BRACE "}"
            KW_ELSE "else"
            IF_LET_EXPR
              KW_IF "if"
              LET_STMT
                PATTERN
                  CHAIN_PATTERN
                    BINDING_PATTERN "let b"
                      KW_LET "let"
                      WORD "b"
                    COLON ":"
                    TYPE_PATTERN
                      TYPE_EXPR "bool"
                        WORD "bool"
                EQUALS "="
                WORD "v"
              BLOCK_EXPR
                L_BRACE "{"
                RETURN_STMT "return 2;"
                  KW_RETURN "return"
                  INTEGER_LITERAL "2"
                  SEMICOLON ";"
                R_BRACE "}"
              KW_ELSE "else"
              BLOCK_EXPR
                L_BRACE "{"
                RETURN_STMT
                  KW_RETURN "return"
                  UNARY_EXPR "-1"
                    MINUS "-"
                    INTEGER_LITERAL "1"
                  SEMICOLON ";"
                R_BRACE "}"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "if_let_body_local_shadows_binding"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            CHAIN_PATTERN
              BINDING_PATTERN "let v"
                KW_LET "let"
                WORD "v"
              COLON ":"
              UNION_PATTERN
                TYPE_PATTERN
                  TYPE_EXPR "int"
                    WORD "int"
                PIPE "|"
                TYPE_PATTERN
                  TYPE_EXPR "string"
                    WORD "string"
          EQUALS "="
          INTEGER_LITERAL "5"
          SEMICOLON ";"
        IF_LET_EXPR
          KW_IF "if"
          LET_STMT
            PATTERN
              CHAIN_PATTERN
                BINDING_PATTERN "let x"
                  KW_LET "let"
                  WORD "x"
                COLON ":"
                TYPE_PATTERN
                  TYPE_EXPR "int"
                    WORD "int"
            EQUALS "="
            WORD "v"
          BLOCK_EXPR
            L_BRACE "{"
            LET_STMT
              PATTERN
                BINDING_PATTERN "let x"
                  KW_LET "let"
                  WORD "x"
              EQUALS "="
              INTEGER_LITERAL "100"
              SEMICOLON ";"
            RETURN_STMT "return x;"
              KW_RETURN "return"
              WORD "x"
              SEMICOLON ";"
            R_BRACE "}"
        RETURN_STMT
          KW_RETURN "return"
          UNARY_EXPR "-1"
            MINUS "-"
            INTEGER_LITERAL "1"
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "if_let_lambda_captures_binding"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            CHAIN_PATTERN
              BINDING_PATTERN "let v"
                KW_LET "let"
                WORD "v"
              COLON ":"
              UNION_PATTERN
                TYPE_PATTERN
                  TYPE_EXPR "int"
                    WORD "int"
                PIPE "|"
                TYPE_PATTERN
                  TYPE_EXPR "string"
                    WORD "string"
          EQUALS "="
          INTEGER_LITERAL "6"
          SEMICOLON ";"
        IF_LET_EXPR
          KW_IF "if"
          LET_STMT
            PATTERN
              CHAIN_PATTERN
                BINDING_PATTERN "let x"
                  KW_LET "let"
                  WORD "x"
                COLON ":"
                TYPE_PATTERN
                  TYPE_EXPR "int"
                    WORD "int"
            EQUALS "="
            WORD "v"
          BLOCK_EXPR
            L_BRACE "{"
            LET_STMT
              PATTERN
                BINDING_PATTERN "let f"
                  KW_LET "let"
                  WORD "f"
              EQUALS "="
              LAMBDA_EXPR
                PARAMETER_LIST "()"
                  L_PAREN "("
                  R_PAREN ")"
                ARROW "->"
                TYPE_EXPR "int"
                  WORD "int"
                BLOCK_EXPR
                  L_BRACE "{"
                  BINARY_EXPR "x + 10"
                    WORD "x"
                    PLUS "+"
                    INTEGER_LITERAL "10"
                  R_BRACE "}"
              SEMICOLON ";"
            RETURN_STMT
              KW_RETURN "return"
              CALL_EXPR
                WORD "f"
                CALL_ARGS "()"
                  L_PAREN "("
                  R_PAREN ")"
              SEMICOLON ";"
            R_BRACE "}"
        RETURN_STMT
          KW_RETURN "return"
          UNARY_EXPR "-1"
            MINUS "-"
            INTEGER_LITERAL "1"
          SEMICOLON ";"
        R_BRACE "}"

=== ERRORS ===
None
