baml_language/crates/baml_tests/snapshots/compiles/parser_statements/baml_tests__compiles__parser_statements__02_parser__let_else.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "let_else_returns_on_mismatch"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            BINDING_PATTERN
              KW_LET "let"
              WORD "v"
              COLON ":"
              PATTERN
                UNION_PATTERN
                  TYPE_PATTERN
                    TYPE_EXPR "int"
                      WORD "int"
                  PIPE "|"
                  TYPE_PATTERN
                    TYPE_EXPR "string"
                      WORD "string"
          EQUALS "="
          STRING_LITERAL "oops"
            QUOTE """
            WORD "oops"
            QUOTE """
          SEMICOLON ";"
        LET_STMT
          PATTERN
            BINDING_PATTERN
              KW_LET "let"
              WORD "n"
              COLON ":"
              PATTERN
                TYPE_PATTERN
                  TYPE_EXPR "int"
                    WORD "int"
          EQUALS "="
          WORD "v"
          KW_ELSE "else"
          BLOCK_EXPR
            L_BRACE "{"
            RETURN_STMT
              KW_RETURN "return"
              UNARY_EXPR "-1"
                MINUS "-"
                INTEGER_LITERAL "1"
              SEMICOLON ";"
            R_BRACE "}"
          SEMICOLON ";"
        RETURN_STMT "return n;"
          KW_RETURN "return"
          WORD "n"
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "let_else_binds_when_match"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            BINDING_PATTERN
              KW_LET "let"
              WORD "v"
              COLON ":"
              PATTERN
                UNION_PATTERN
                  TYPE_PATTERN
                    TYPE_EXPR "int"
                      WORD "int"
                  PIPE "|"
                  TYPE_PATTERN
                    TYPE_EXPR "string"
                      WORD "string"
          EQUALS "="
          INTEGER_LITERAL "42"
          SEMICOLON ";"
        LET_STMT
          PATTERN
            BINDING_PATTERN
              KW_LET "let"
              WORD "n"
              COLON ":"
              PATTERN
                TYPE_PATTERN
                  TYPE_EXPR "int"
                    WORD "int"
          EQUALS "="
          WORD "v"
          KW_ELSE "else"
          BLOCK_EXPR
            L_BRACE "{"
            RETURN_STMT
              KW_RETURN "return"
              UNARY_EXPR "-1"
                MINUS "-"
                INTEGER_LITERAL "1"
              SEMICOLON ";"
            R_BRACE "}"
          SEMICOLON ";"
        RETURN_STMT
          KW_RETURN "return"
          BINARY_EXPR "n + 1"
            WORD "n"
            PLUS "+"
            INTEGER_LITERAL "1"
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "let_else_with_throw"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            BINDING_PATTERN
              KW_LET "let"
              WORD "v"
              COLON ":"
              PATTERN
                UNION_PATTERN
                  TYPE_PATTERN
                    TYPE_EXPR "int"
                      WORD "int"
                  PIPE "|"
                  TYPE_PATTERN
                    TYPE_EXPR "string"
                      WORD "string"
          EQUALS "="
          INTEGER_LITERAL "7"
          SEMICOLON ";"
        LET_STMT
          PATTERN
            BINDING_PATTERN
              KW_LET "let"
              WORD "n"
              COLON ":"
              PATTERN
                TYPE_PATTERN
                  TYPE_EXPR "int"
                    WORD "int"
          EQUALS "="
          WORD "v"
          KW_ELSE "else"
          BLOCK_EXPR
            L_BRACE "{"
            THROW_STMT
              THROW_EXPR
                KW_THROW "throw"
                STRING_LITERAL "expected int"
                  QUOTE """
                  WORD "expected"
                  WORD "int"
                  QUOTE """
              SEMICOLON ";"
            R_BRACE "}"
          SEMICOLON ";"
        RETURN_STMT "return n;"
          KW_RETURN "return"
          WORD "n"
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "let_else_inside_loop_break"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            BINDING_PATTERN "let acc"
              KW_LET "let"
              WORD "acc"
          EQUALS "="
          INTEGER_LITERAL "0"
          SEMICOLON ";"
        LET_STMT
          PATTERN
            BINDING_PATTERN "let i"
              KW_LET "let"
              WORD "i"
          EQUALS "="
          INTEGER_LITERAL "0"
          SEMICOLON ";"
        WHILE_STMT
          KW_WHILE "while"
          PAREN_EXPR
            L_PAREN "("
            BINARY_EXPR "i < 5"
              WORD "i"
              LESS "<"
              INTEGER_LITERAL "5"
            R_PAREN ")"
          BLOCK_EXPR
            L_BRACE "{"
            LET_STMT
              PATTERN
                BINDING_PATTERN
                  KW_LET "let"
                  WORD "v"
                  COLON ":"
                  PATTERN
                    UNION_PATTERN
                      TYPE_PATTERN
                        TYPE_EXPR "int"
                          WORD "int"
                      PIPE "|"
                      TYPE_PATTERN
                        TYPE_EXPR "string"
                          WORD "string"
              EQUALS "="
              WORD "i"
              SEMICOLON ";"
            LET_STMT
              PATTERN
                BINDING_PATTERN
                  KW_LET "let"
                  WORD "n"
                  COLON ":"
                  PATTERN
                    TYPE_PATTERN
                      TYPE_EXPR "int"
                        WORD "int"
              EQUALS "="
              WORD "v"
              KW_ELSE "else"
              BLOCK_EXPR
                L_BRACE "{"
                BREAK_STMT "break;"
                  KW_BREAK "break"
                  SEMICOLON ";"
                R_BRACE "}"
              SEMICOLON ";"
            BINARY_EXPR
              WORD "acc"
              EQUALS "="
              BINARY_EXPR "acc + n"
                WORD "acc"
                PLUS "+"
                WORD "n"
            SEMICOLON ";"
            BINARY_EXPR
              WORD "i"
              EQUALS "="
              BINARY_EXPR "i + 1"
                WORD "i"
                PLUS "+"
                INTEGER_LITERAL "1"
            SEMICOLON ";"
            R_BRACE "}"
        SEMICOLON ";"
        RETURN_STMT "return acc;"
          KW_RETURN "return"
          WORD "acc"
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "let_else_inside_loop_continue"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            BINDING_PATTERN "let acc"
              KW_LET "let"
              WORD "acc"
          EQUALS "="
          INTEGER_LITERAL "0"
          SEMICOLON ";"
        LET_STMT
          PATTERN
            BINDING_PATTERN "let i"
              KW_LET "let"
              WORD "i"
          EQUALS "="
          INTEGER_LITERAL "0"
          SEMICOLON ";"
        WHILE_STMT
          KW_WHILE "while"
          PAREN_EXPR
            L_PAREN "("
            BINARY_EXPR "i < 5"
              WORD "i"
              LESS "<"
              INTEGER_LITERAL "5"
            R_PAREN ")"
          BLOCK_EXPR
            L_BRACE "{"
            BINARY_EXPR
              WORD "i"
              EQUALS "="
              BINARY_EXPR "i + 1"
                WORD "i"
                PLUS "+"
                INTEGER_LITERAL "1"
            SEMICOLON ";"
            LET_STMT
              PATTERN
                BINDING_PATTERN
                  KW_LET "let"
                  WORD "v"
                  COLON ":"
                  PATTERN
                    UNION_PATTERN
                      TYPE_PATTERN
                        TYPE_EXPR "int"
                          WORD "int"
                      PIPE "|"
                      TYPE_PATTERN
                        TYPE_EXPR "string"
                          WORD "string"
              EQUALS "="
              WORD "i"
              SEMICOLON ";"
            LET_STMT
              PATTERN
                BINDING_PATTERN
                  KW_LET "let"
                  WORD "n"
                  COLON ":"
                  PATTERN
                    TYPE_PATTERN
                      TYPE_EXPR "int"
                        WORD "int"
              EQUALS "="
              WORD "v"
              KW_ELSE "else"
              BLOCK_EXPR
                L_BRACE "{"
                CONTINUE_STMT "continue;"
                  KW_CONTINUE "continue"
                  SEMICOLON ";"
                R_BRACE "}"
              SEMICOLON ";"
            BINARY_EXPR
              WORD "acc"
              EQUALS "="
              BINARY_EXPR "acc + n"
                WORD "acc"
                PLUS "+"
                WORD "n"
            SEMICOLON ";"
            R_BRACE "}"
        SEMICOLON ";"
        RETURN_STMT "return acc;"
          KW_RETURN "return"
          WORD "acc"
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "let_else_multiple_bindings_in_sequence"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            BINDING_PATTERN
              KW_LET "let"
              WORD "a_raw"
              COLON ":"
              PATTERN
                UNION_PATTERN
                  TYPE_PATTERN
                    TYPE_EXPR "int"
                      WORD "int"
                  PIPE "|"
                  TYPE_PATTERN
                    TYPE_EXPR "string"
                      WORD "string"
          EQUALS "="
          INTEGER_LITERAL "1"
          SEMICOLON ";"
        LET_STMT
          PATTERN
            BINDING_PATTERN
              KW_LET "let"
              WORD "b_raw"
              COLON ":"
              PATTERN
                UNION_PATTERN
                  TYPE_PATTERN
                    TYPE_EXPR "int"
                      WORD "int"
                  PIPE "|"
                  TYPE_PATTERN
                    TYPE_EXPR "string"
                      WORD "string"
          EQUALS "="
          INTEGER_LITERAL "2"
          SEMICOLON ";"
        LET_STMT
          PATTERN
            BINDING_PATTERN
              KW_LET "let"
              WORD "a"
              COLON ":"
              PATTERN
                TYPE_PATTERN
                  TYPE_EXPR "int"
                    WORD "int"
          EQUALS "="
          WORD "a_raw"
          KW_ELSE "else"
          BLOCK_EXPR
            L_BRACE "{"
            RETURN_STMT
              KW_RETURN "return"
              UNARY_EXPR "-1"
                MINUS "-"
                INTEGER_LITERAL "1"
              SEMICOLON ";"
            R_BRACE "}"
          SEMICOLON ";"
        LET_STMT
          PATTERN
            BINDING_PATTERN
              KW_LET "let"
              WORD "b"
              COLON ":"
              PATTERN
                TYPE_PATTERN
                  TYPE_EXPR "int"
                    WORD "int"
          EQUALS "="
          WORD "b_raw"
          KW_ELSE "else"
          BLOCK_EXPR
            L_BRACE "{"
            RETURN_STMT
              KW_RETURN "return"
              UNARY_EXPR "-2"
                MINUS "-"
                INTEGER_LITERAL "2"
              SEMICOLON ";"
            R_BRACE "}"
          SEMICOLON ";"
        RETURN_STMT
          KW_RETURN "return"
          BINARY_EXPR "a + b"
            WORD "a"
            PLUS "+"
            WORD "b"
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "let_else_with_call_initializer"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "x"
        COLON ":"
        TYPE_EXPR "int | string"
          WORD "int"
          PIPE "|"
          WORD "string"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            BINDING_PATTERN
              KW_LET "let"
              WORD "n"
              COLON ":"
              PATTERN
                TYPE_PATTERN
                  TYPE_EXPR "int"
                    WORD "int"
          EQUALS "="
          WORD "x"
          KW_ELSE "else"
          BLOCK_EXPR
            L_BRACE "{"
            RETURN_STMT
              KW_RETURN "return"
              UNARY_EXPR "-1"
                MINUS "-"
                INTEGER_LITERAL "1"
              SEMICOLON ";"
            R_BRACE "}"
          SEMICOLON ";"
        RETURN_STMT "return n;"
          KW_RETURN "return"
          WORD "n"
          SEMICOLON ";"
        R_BRACE "}"

=== ERRORS ===
None
